--- a/parlant-chat-react/package.json
+++ b/parlant-chat-react/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "dist/my-react-package.umd.js",
+  "module": "dist/my-react-package.es.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -17,6 +20,7 @@
     "@types/node": "^22.13.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-fetch": "^4.1.0",
     "parlant-client": "^0.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
