--- a/parlant-chat-react/tsconfig.json
+++ b/parlant-chat-react/tsconfig.json
@@ -3,6 +3,8 @@
 		"rootDirs": ["."],
 		"module": "ES2022",
 		"moduleResolution": "Bundler",
+    "target": "ES2015",
+		"strict": true,
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"esModuleInterop": true,
