--- a/parlant-chat-react/package.json
+++ b/parlant-chat-react/package.json
@@ -9,12 +9,14 @@
   "exports": {
     ".": {
       "import": "./dist/parlant-chat-react.js",
-      "require": "./dist/parlant-chat-react.umd.js"
+      "require": "./dist/parlant-chat-react.umd.js",
+      "types": "./dist/App.d.ts"
     },
     "./dist/style.css": "./dist/parlant-chat-react.css"
   },
   "files": [
     "dist",
+    "src/index.css",
     "LICENSE",
     "README.md"
   ],
@@ -23,7 +25,8 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "lint": "biome check .",
-    "format": "biome format ."
+    "format": "biome format .",
+    "ladle": "ladle serve"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
@@ -33,14 +36,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-fetch": "^4.1.0",
-    "parlant-client": "^0.10.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "parlant-client": "^0.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@ladle/react": "^5.0.2",
     "@tailwindcss/postcss": "^4.0.17",
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
@@ -50,10 +52,13 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
     "typescript": "~5.7.3",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.3"
+    "vite": "^6.2.3",
+    "vite-plugin-dts": "^4.5.3"
   }
 }
