--- a/parlant-chat-react/tsconfig.json
+++ b/parlant-chat-react/tsconfig.json
@@ -1,13 +1,22 @@
 {
 	"compilerOptions": {
 		"rootDirs": ["."],
-		"module": "ES2022",
-		"moduleResolution": "Bundler",
-    "target": "ES2015",
+		// "module": "ES2022",
+		// "moduleResolution": "Bundler",
+    	"target": "ES2015",
+		"module": "ESNext",
+    	"moduleResolution": "Node",
 		"strict": true,
 		"resolveJsonModule": true,
 		"isolatedModules": true,
+		"outDir": "dist",
+		"allowJs": true,
+		"declaration": true,
+		"declarationMap": true,
+		"emitDeclarationOnly": true,
+    	"skipLibCheck": true,
 		"esModuleInterop": true,
+    	"allowSyntheticDefaultImports": true,
 		"lib": ["DOM", "ESNext", "ES2022"],
 		"baseUrl": ".",
 		"paths": {
@@ -15,5 +24,6 @@
 		},
 		"jsx": "react-jsx"
 	},
-	"include": ["src"]
+	"include": ["src/**/*"],
+	"exclude": ["dist", "node_modules"]
 }
