--- a/parlant-chat-react/package.json
+++ b/parlant-chat-react/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-fetch": "^4.1.0",
+    "lucide-react": "^0.484.0",
     "parlant-client": "^0.10.0"
   },
   "devDependencies": {
