refactor(chat): reorder package.json exports and adjust chat component styles
Reorder the `types` field in package.json exports for better readability and maintainability. Adjust text color and leading properties in the chat component's textarea for improved UI consistency. Remove unused `useEffect` hook for abort controller cleanup to simplify the code.

--- a/parlant-chat-react/package.json
+++ b/parlant-chat-react/package.json
@@ -8,9 +8,9 @@
   "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/App.d.ts",
       "import": "./dist/parlant-chat-react.js",
-      "require": "./dist/parlant-chat-react.umd.js",
-      "types": "./dist/App.d.ts"
+      "require": "./dist/parlant-chat-react.umd.js"
     },
     "./dist/style.css": "./dist/parlant-chat-react.css"
   },
