refactor(index.ts, package.json): simplify exports and fix CSS path
This commit simplifies the export statement in `index.ts` by using `export default` and fixes the CSS path in `package.json` to ensure proper styling.

--- a/parlant-chat-react/package.json
+++ b/parlant-chat-react/package.json
@@ -12,11 +12,10 @@
       "import": "./dist/parlant-chat-react.js",
       "require": "./dist/parlant-chat-react.umd.js"
     },
-    "./dist/style.css": "./dist/parlant-chat-react.css"
+    "./style.css": "./dist/parlant-chat-react.css"
   },
   "files": [
     "dist",
-    "src/index.css",
     "LICENSE",
     "README.md"
   ],
