--- a/parlant-chat-react/package.json
+++ b/parlant-chat-react/package.json
@@ -35,8 +35,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-fetch": "^4.1.0",
+    "jss": "^10.10.0",
+    "jss-preset-default": "^10.10.0",
     "lucide-react": "^0.484.0",
-    "parlant-client": "^0.10.0"
+    "parlant-client": "^0.10.0",
+    "react-jss": "^10.10.0",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -44,6 +48,7 @@
     "@tailwindcss/postcss": "^4.0.17",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "@types/webfontloader": "^1.6.38",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "biome": "^0.3.3",
