chore: remove unused keywords from package.json
The "keywords" field in package.json was cleared as it contained unused or irrelevant entries, improving the clarity and maintainability of the project configuration.

--- a/parlant-chat-react/package.json
+++ b/parlant-chat-react/package.json
@@ -24,10 +24,7 @@
   "files": [
     "dist"
   ],
-  "keywords": [
-    "parlant",
-    "parlant-chatbot"
-  ],
+  "keywords": [],
   "homepage": "https://github.com/emcie-co/parlant-chat-react/blob/main/parlant-chat-react/README.md",
   "scripts": {
     "dev": "vite",
