chore: set package.json private to true
Prevent accidental publication of the package by marking it as private

--- a/parlant-chat-react/package.json
+++ b/parlant-chat-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parlant-chat-react",
-  "private": false,
+  "private": true,
   "version": "0.0.1",
   "description": "Parlant's chatbot seamlessly integrates into your website",
   "type": "module",
