chore: set package.json private field to false
This change allows the package to be published to npm, enabling easier integration and distribution of Parlant's chatbot.

--- a/parlant-chat-react/package.json
+++ b/parlant-chat-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parlant-chat-react",
-  "private": true,
+  "private": false,
   "version": "0.0.1",
   "description": "Parlant's chatbot seamlessly integrates into your website",
   "type": "module",
