--- a/parlant-chat-react/package.json
+++ b/parlant-chat-react/package.json
@@ -35,6 +35,7 @@
     "ladle": "ladle serve"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.69.0",
     "@types/node": "^22.13.13",
