chore: update VS Code settings and add .vscode/settings.json to .gitignore
This commit adds new settings for tab sizing and tab wrapping in the VS Code configuration file. Additionally, the .vscode/settings.json file is now included in the .gitignore to prevent it from being tracked in the repository.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,7 @@
         "titleBar.activeForeground": "#fff",
         "titleBar.inactiveBackground": "#fff",
         "titleBar.inactiveForeground": "#fff"
-    }
+    },
+    "workbench.editor.tabSizing": "fit",
+    "workbench.editor.wrapTabs": false
 }
