--- a/parlant-chat-react/package.json
+++ b/parlant-chat-react/package.json
@@ -47,6 +47,9 @@
     "lucide-react": "^0.484.0",
     "parlant-client": "^0.10.0",
     "react-jss": "^10.10.0",
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-breaks": "^4.0.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
