--- a/parlant-chat-react/package.json
+++ b/parlant-chat-react/package.json
@@ -50,6 +50,7 @@
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
     "remark-breaks": "^4.0.0",
+    "remark-emoji": "^5.0.1",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
