chore: update package metadata and improve README with badges
This commit updates the package version to 1.0.0 and changes the author name in package.json. Additionally, it enhances the README.md by adding build status, license, and npm version badges for better visibility. The import paths in the codebase have been refactored to use absolute paths for improved clarity and maintainability. Accessibility improvements include adding `aria-hidden` attributes to images and ensuring live regions for dynamic content updates.

--- a/parlant-chat-react/package.json
+++ b/parlant-chat-react/package.json
@@ -1,13 +1,13 @@
 {
   "name": "parlant-chat-react",
   "private": false,
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Parlant's chatbot seamlessly integrates into your website",
   "type": "module",
   "main": "dist/parlant-chat-react.umd.js",
   "module": "dist/parlant-chat-react.js",
   "types": "dist/types/index.d.ts",
-  "author": "Emcie-co",
+  "author": "MenachemBrichta",
   "license": "MIT",
   "repository": {
     "type": "git",
