--- a/biome.json
+++ b/biome.json
@@ -1,73 +1,38 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-	"vcs": {
-		"enabled": false,
-		"clientKind": "git",
-		"useIgnoreFile": false
-	},
-	"files": {
-		"ignoreUnknown": false,
-		"ignore": []
-	},
-	"formatter": {
-		"enabled": true,
-		"indentStyle": "tab",
-		"lineWidth": 200,
-		"bracketSpacing": false
-	},
-	"organizeImports": {
-		"enabled": true
-	},
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": true,
-			"a11y": {
-				"useSemanticElements": "off"
-			},
-			"nursery": {
-				"useSortedClasses": "warn"
-			},
-			"suspicious": {
-				"noExplicitAny": "off"
-			},
-			"complexity": {
-				"noStaticOnlyClass": "off"
-			}
-		}
-	},
-	"javascript": {
-		"formatter": {
-			"quoteStyle": "single",
-			"jsxQuoteStyle": "double",
-			"enabled": true,
-			"quoteProperties": "asNeeded"
-		},
-		"linter": {
-			"enabled": true
-		},
-		"assists": {
-			"enabled": true
-		}
-	},
-	"css": {
-		"formatter": {
-			"enabled": true,
-			"quoteStyle": "single"
-		},
-		"linter": {
-			"enabled": true
-		}
-	},
-	"json": {
-		"formatter": {
-			"enabled": true
-		},
-		"linter": {
-			"enabled": true
-		},
-		"assists": {
-			"enabled": true
-		}
-	}
+    "$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
+    "organizeImports": {
+        "enabled": true
+    },
+    "linter": {
+        "enabled": true,
+        "rules": {
+            "recommended": true
+        }
+    },
+    "formatter": {
+        "enabled": true,
+        "formatWithErrors": false,
+        "indentStyle": "space",
+        "indentWidth": 2,
+        "lineWidth": 80
+    },
+    "javascript": {
+        "formatter": {
+            "quoteStyle": "single"
+        }
+    },
+    "files": {
+        "include": [
+            "src/**/*.{ts,tsx,js,jsx}"
+        ],
+        "ignore": [
+            "**/node_modules/**",
+            "**/dist/**"
+        ]
+    },
+    "vcs": {
+        "enabled": true,
+        "clientKind": "git",
+        "useIgnoreFile": true
+    }
 }
